# orion

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  pyproject.toml
orion/: __main__.py  config.py  server.py
orion/endpoints/: __init__.py  pipeline.py
orion/endpoints/docs/: __init__.py  pipeline.py
orion/messaging/: producer.py
tests/messaging/: test_producer.py
